# switchbot-e6-optimizer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/switchbot_e6_optimizer/: __init__.py  __main__.py  optimizer.py
tests/: test_optimizer.py
